--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         </footer>
 
         <div ng-class="{'show': loading, 'hide': !loading}" class="loading">
-            <div class="content"></div>
+            <div class="loader"></div>
         </div>
 
         <div id="fb-root"></div>
@@ -46,6 +46,7 @@
         <script src="app/app.js"></script>
 
         <script src="app/components/components.services.js"></script>
+        <script src="app/components/components.directives.js"></script>
 
         <script src="app/home/home.controllers.js"></script>
 
