--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Chess</title>
 
-        <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="lib/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <link ng-if="user.lang == 'ar'" ng-href="css/style.ar.css" rel="stylesheet">
     </head>
@@ -40,6 +40,8 @@
         <script src="socket.io/socket.io.js"></script>
 
         <script src="lib/jquery.min.js"></script>
+        <script src="lib/bootstrap.min.js"></script>
+        
         <script src="lib/angular.min.js"></script>
         <script src="lib/angular-route.min.js"></script>
 
@@ -49,6 +51,7 @@
         <script src="app/components/components.directives.js"></script>
 
         <script src="app/home/home.controllers.js"></script>
+        <script src="app/home/home.directives.js"></script>
 
         <script src="//ads.lfstmedia.com/getad?site=150053"></script>
 
