add icomoon && directive sort table

--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -1,28 +1,57 @@
 <div class="content">
-    <div class="pull-left left">
-        <div class="element clock">{{ time }}</div>
-    </div>
 
-    <div class="middle">
-        <div class="profil element">
-            <div class="pull-right">
-                <button data-toggle="modal" data-target="#modal-create-game" class="btn btn-primary">{{ text.create_game }}</button>
+    <div class="row">
+        <div class="col-md-10">
+            <div class="profil element">
+                <div class="pull-right">
+                    <button data-toggle="modal" data-target="#modal-create-game" class="btn btn-primary">{{ text.create_game }}</button>
+                </div>
+                <div class="pull-left img">
+                    <img src="https://graph.facebook.com/{{ user.uid }}/picture">
+                </div>
+                <div>
+                    <a href="#">{{ user.name }}</a>
+                </div>
+                <div>
+                    <span>{{ text.points }}: </span>
+                    <strong>{{ user.points }}</strong>
+                </div>
+                <div>
+                    <span>{{ text.ranking }}: </span>
+                    <strong>{{ user.ranking }}</strong>
+                </div>
+                <div class="clear"></div>
             </div>
-            <div class="pull-left img">
-                <img src="https://graph.facebook.com/{{ user.uid }}/picture">
+
+            <div class="element">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>{{ text.name }}</th>
+                            <th th-sortable name="'points'" class="text-center"></th>
+                            <th th-sortable name="'ranking'" class="text-center"></th>
+                            <th th-sortable name="'color'" class="text-center"></th>
+                            <th th-sortable name="'time'" class="text-center"></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="game in createdGames | orderBy:predicate:reverse">
+                            <td><img width="30px" ng-src="https://graph.facebook.com/{{game.uid}}/picture"></td>
+                            <td>{{ game.name }}</td>
+                            <td class="text-center">{{ game.points }}</td>
+                            <td class="text-center">{{ game.ranking }}</td>
+                            <td class="text-center">{{ text[game.color] }}</td>
+                            <td class="text-center">{{ game.time / 60 }}:00</td>
+                            <td><button class="btn btn-success btn-sm">{{ text.play }}</button></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-            <div>
-                <a href="#">{{ user.name }}</a>
-            </div>
-            <div>
-                <span>{{ text.points }}: </span>
-                <strong>{{ user.points }}</strong>
-            </div>
-            <div>
-                <span>{{ text.ranking }}: </span>
-                <strong>{{ user.ranking }}</strong>
-            </div>
-            <div class="clear"></div>
+        </div>
+        <div class="col-md-2">
+            <div class="element clock">{{ time }}</div>
         </div>
     </div>
 </div>
