--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <title>Chess</title>
 
-        <link href="lib/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/icomoon.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <link ng-if="user.lang == 'ar'" ng-href="css/style.ar.css" rel="stylesheet">
     </head>
