--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,8 @@
         <script src="socket.io/socket.io.js"></script>
 
         <script src="lib/jquery.min.js"></script>
+        <script src="lib/jquery-ui.min.js"></script>
+        
         <script src="lib/bootstrap.min.js"></script>
         
         <script src="lib/angular.min.js"></script>
