--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -26,15 +26,15 @@
             <div class="element">
                 <h2>
                     <span>{{ text.waitingPlayers }}</span>
-                    <span class="info-tooltip">{{ createdGames.length }}</span>
+                    <span class="info-tooltip">{{ filteredCreatedGames.length }}</span>
                     <div class="pull-right navbar-right">
                         <div dropdown-filter-game class="btn-right"></div>
                         <div toggle-element class="btn-right"></div>
                     </div>
                 </h2>
                 <section>
-                    <table ng-if="createdGames.length" class="list-user table table-striped">
-                        <thead>
+                    <table class="list-user table table-striped">
+                        <thead ng-if="filteredCreatedGames.length">
                             <tr>
                                 <th class="img"></th>
                                 <th class="name"></th>
@@ -46,7 +46,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="game in createdGames | orderBy:predicate:reverse | filter:filtersGame()">
+                            <tr ng-repeat="game in filteredCreatedGames = (createdGames | orderBy:predicate:reverse | filter:filtersGame())">
                                 <td><img class="img" ng-src="https://graph.facebook.com/{{game.uid}}/picture"></td>
                                 <td>
                                     <span class="user-name">{{ game.name }}</span>
@@ -71,7 +71,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <div ng-if="!createdGames.length" class="load-spin">
+                    <div ng-if="!filteredCreatedGames.length" class="load-spin">
                         <img src="/img/load-spin.svg">
                     </div>
                 </section>
